--- a/package.json
+++ b/package.json
@@ -3,13 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^9.8.8",
     "mdb-react-ui-kit": "^5.1.0",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-wavify": "^1.8.0",
+    "swiper": "^9.1.1",
+    "tailwindcss": "^3.2.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -37,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^6.9.0",
-    "tailwindcss": "^3.2.7"
+    "react-router-dom": "^6.9.0"
   }
 }
