--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
     "react-wavify": "^1.8.0",
     "swiper": "^9.1.1",
     "tailwindcss": "^3.2.7",
